--- a/translation/de/sabbamitta/sutta/sn/sn7/sn7.21_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn7/sn7.21_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn7.21:0.2": "2. Das Kapitel über Laienschüler ",
   "sn7.21:0.3": "Mit Saṅgārava ",
   "sn7.21:1.1": "In Sāvatthī. ",
-  "sn7.21:1.2": "Damals befand sich in Sāvatthī ein Brahmane mit Namen Saṅgārava. Er übte die Reinigung mit Wasser, glaubte an die Reinigung mit Wasser. Er lebte hingegeben an die Übung des Eintauchens ins Wasser zur Abend- und Morgendämmerung. ",
+  "sn7.21:1.2": "Damals befand sich in Sāvatthī ein Brahmane mit Namen Saṅgārava. Er übte die Reinigung mit Wasser, glaubte an die Reinigung mit Wasser. Er lebte hingegeben an die Übung des Eintauchens ins Wasser zur Morgen- und Abenddämmerung. ",
   "sn7.21:1.3": "Da kleidete sich der ehrwürdige Ānanda am Morgen an, nahm Schale und Robe und betrat Sāvatthī zum Almosengang. ",
   "sn7.21:1.4": "Er zog um Almosen durch Sāvatthī. Nach dem Essen, als er vom Almosengang zurückkam, ging er zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "sn7.21:1.5": "„Herr, in Sāvatthī befindet sich ein Brahmane mit Namen Saṅgārava. Er übt die Reinigung mit Wasser, glaubt an die Reinigung mit Wasser. Er lebt hingegeben an die Übung des Eintauchens ins Wasser zur Abend- und Morgendämmerung. ",
