--- a/translation/de/sabbamitta/sutta/an/an7/an7.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.53_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "an7.53:5.1": "Als Sāriputta gegessen und Hand und Schale gewaschen hatte, setzte sie sich zur Seite hin. ",
   "an7.53:5.2": "Sāriputta sagte zu ihr: ",
   "an7.53:5.3": "„Nandas Mutter, wer hat dir gesagt, dass der Saṅgha der Mönche und Nonnen ankommen würde?“ ",
-  "an7.53:6.1": "„Herr, letzte Nacht bin ich beim Morgengrauen aufgestanden, habe die Strophen des ‚Weges zum Jenseits‘ aufgesagt und dann geschwiegen. ",
+  "an7.53:6.1": "„Herr, letzte Nacht bin ich beim ersten Morgengrauen aufgestanden, habe die Strophen des ‚Weges zum Jenseits‘ aufgesagt und dann geschwiegen. ",
   "an7.53:6.2": "Als er erkannte, dass ich zu Ende war, spendete mir der Große König Vessavaṇa Beifall: ",
   "an7.53:6.3": "‚Gut, Schwester! Gut, Schwester!‘ ",
   "an7.53:6.4": "Ich fragte: ‚Aber wer kannst du wohl sein, mein Lieber?‘ ",
