--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.6_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "ud5.6:16.6": "Er richtete in der Hütte, in der der Buddha wohnte, für Soṇa eine Unterkunft her. ",
   "ud5.6:17.1": "Der Buddha verbrachte den größten Teil der Nacht im Freien in Meditation sitzend. Dann erhob er sich von seinem Sitz, wusch seine Füße und ging in seine Hütte. ",
   "ud5.6:17.2": "Der Ehrwürdige Soṇa tat das Gleiche. ",
-  "ud5.6:17.3": "Da stand der Buddha beim Morgengrauen auf und wandte sich an Soṇa: ",
+  "ud5.6:17.3": "Da stand der Buddha beim ersten Morgengrauen auf und wandte sich an Soṇa: ",
   "ud5.6:17.4": "„Sprich einen Dhammatext, Mönch, der dir in den Sinn kommt.“ ",
   "ud5.6:18.1": "„Ja, Herr“, antwortete Soṇa. Er trug in einem Sprechgesang alle sechzehn Lehrreden des Achterkapitels vor. ",
   "ud5.6:18.2": "Als Soṇa seinen Sprechgesang beendet hatte, spendete der Buddha ihm Beifall: ",
