--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
@@ -58,7 +58,7 @@
   "ud3.3:13.5": "Herr, bitte begrüße die neu angekommenen Mönche und Nonnen.“ ",
   "ud3.3:13.6": "Doch zum zweiten Mal schwieg der Buddha. ",
   "ud3.3:14.1": "Zum dritten Mal erhob sich Ānanda von seinem Sitz, als die Nacht fortgeschritten war, während der letzten Nachtwache, als der Morgen graute und der Nacht Freude brachte, ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
-  "ud3.3:14.2": "„Herr, die Nacht ist fortgeschritten. Es ist die letzte Nachtwache, die Morgendämmerung bricht herein und bringt der Nacht Freude, und die neu angekommenen Mönche und Nonnen haben lange dagesessen. ",
+  "ud3.3:14.2": "„Herr, die Nacht ist fortgeschritten. Es ist die letzte Nachtwache, der Morgen graut und bringt der Nacht Freude, und die neu angekommenen Mönche und Nonnen haben lange dagesessen. ",
   "ud3.3:14.7": "Herr, bitte begrüße die neu angekommenen Mönche und Nonnen.“ ",
   "ud3.3:15.1": "Da trat der Buddha aus dieser unerschütterlichen Meditation heraus und wandte sich an Ānanda: ",
   "ud3.3:15.2": "„Wenn du gewusst hättest, Ānanda, hättest du nicht so viel gesagt. ",
