--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -233,7 +233,7 @@
   "pli-tv-kd11:9.1.3": "In addition, the monks regularly gave him probation, sent him back to the beginning, gave him trial periods, and rehabilitated him. ",
   "pli-tv-kd11:9.1.4": "The monks of few desires complained and criticized him, ",
   "pli-tv-kd11:9.1.5": "“How can Venerable Seyyasaka go on like this?” ",
-  "pli-tv-kd11:9.1.8": "And they told the Buddha. ",
+  "pli-tv-kd11:9.1.8": "They told the Buddha. ",
   "pli-tv-kd11:9.1.9": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
   "pli-tv-kd11:9.1.10": "“Is it true that the monk Seyyasaka goes on like this?” ",
   "pli-tv-kd11:9.1.13": "“It’s true, Sir.” ",
