--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -235,7 +235,7 @@
   "pli-tv-kd11:9.1.5": "“How can Venerable Seyyasaka go on like this?” ",
   "pli-tv-kd11:9.1.8": "They told the Buddha. ",
   "pli-tv-kd11:9.1.9": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
-  "pli-tv-kd11:9.1.10": "“Is it true that the monk Seyyasaka goes on like this?” ",
+  "pli-tv-kd11:9.1.10": "“Is it true, monks, that the monk Seyyasaka goes on like this?” ",
   "pli-tv-kd11:9.1.13": "“It’s true, Sir.” ",
   "pli-tv-kd11:9.1.14": "The Buddha rebuked him, ",
   "pli-tv-kd11:9.1.15": "“It’s not suitable for that foolish man, it’s not proper, it’s not worthy of a monastic, it’s not allowable, it’s not to be done. ",
