--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -259,11 +259,11 @@
   "pli-tv-kd11:9.2.10": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:9.2.11": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.2.12": "He’s constantly and improperly socializing with householders. ",
-  "pli-tv-kd11:9.2.13": "Moreover, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
+  "pli-tv-kd11:9.2.13": "In addition, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.14": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.15": "instructing him to live with formal support. ",
-  "pli-tv-kd11:9.2.16": "Any monk who approves of doing a legal procedure of demotion against the monk Seyyasaka, ",
-  "pli-tv-kd11:9.2.17": "instructing him to live with formal support, should remain silent. ",
+  "pli-tv-kd11:9.2.16": "Any monk who approves of doing this legal procedure against the monk Seyyasaka, ",
+  "pli-tv-kd11:9.2.17": "should remain silent. ",
   "pli-tv-kd11:9.2.18": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:9.2.19": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:9.2.20": "For the third time I speak on this matter. ",
