--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -270,11 +270,11 @@
   "pli-tv-kd11:9.2.21": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:9.2.22": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.2.23": "He’s constantly and improperly socializing with householders. ",
-  "pli-tv-kd11:9.2.24": "Moreover, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
+  "pli-tv-kd11:9.2.24": "In addition, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.25": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.26": "instructing him to live with formal support. ",
-  "pli-tv-kd11:9.2.27": "Any monk who approves of doing a legal procedure of demotion against the monk Seyyasaka, ",
-  "pli-tv-kd11:9.2.28": "instructing him to live with formal support, should remain silent. ",
+  "pli-tv-kd11:9.2.27": "Any monk who approves of doing this legal procedure against the monk Seyyasaka, ",
+  "pli-tv-kd11:9.2.28": "should remain silent. ",
   "pli-tv-kd11:9.2.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:9.2.30": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.31": "instructing him to live with formal support. ",
