--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -282,7 +282,7 @@
   "pli-tv-kd11:10.1.0": "2.1 The group of twelve on illegitimate legal procedures ",
   "pli-tv-kd11:10.1.1": "“When a legal procedure of demotion has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.2": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
-  "pli-tv-kd11:10.1.4": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.4": "When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.5": "it’s done against one who hasn’t committed any offense, it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done against one who’s confessed their offense. ",
   "pli-tv-kd11:10.1.7": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.8": "it’s done without having accused the person of their offense, it’s done without having reminded the person of their offense, it’s done without having charged the person with their offense. ",
