--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -296,11 +296,11 @@
   "pli-tv-kd11:10.1.20": "it’s done against one who hasn’t committed any offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.22": "When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.23": "it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:10.1.25": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.25": "When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.26": "it’s done against one who’s confessed their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:10.1.28": "“When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.28": "“When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.29": "it’s done without having accused the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:10.1.31": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.31": "When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.32": "it’s done without having reminded the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.34": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.35": "it’s done without having charged the person with their offense, it’s done illegitimately, it’s done by an incomplete assembly.” ",
