--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -302,7 +302,7 @@
   "pli-tv-kd11:10.1.29": "it’s done without having accused the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.31": "When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.32": "it’s done without having reminded the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:10.1.34": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.34": "When a procedure of demotion has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.35": "it’s done without having charged the person with their offense, it’s done illegitimately, it’s done by an incomplete assembly.” ",
   "pli-tv-kd11:10.1.37": "The group of twelve on illegitimate legal procedures is finished. ",
   "pli-tv-kd11:10.1.38.0": "2.2 The group of twelve on legitimate legal procedures ",
