--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -311,8 +311,8 @@
   "pli-tv-kd11:10.1.41": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.42": "it’s done against one who’s committed an offense, it’s done against one who’s committed an offense that’s clearable by confession, it’s done against one who hasn’t confessed their offense. ",
   "pli-tv-kd11:10.1.44": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
-  "pli-tv-kd11:10.1.45": "it is done after having accused the person of their offense, it is done after having reminded the person of their offense, it is done after having charged the person with their offense. ",
-  "pli-tv-kd11:10.1.47": "“When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.45": "it’s done after having accused the person of their offense, it’s done after having reminded the person of their offense, it’s done after having charged the person with their offense. ",
+  "pli-tv-kd11:10.1.47": "“When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.48": "it’s done in the presence of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.50": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.51": "it’s done with the questioning of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
