--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -318,7 +318,7 @@
   "pli-tv-kd11:10.1.51": "it’s done with the questioning of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.53": "When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.54": "it’s done with the admission of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:10.1.56": "“When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.56": "“When a procedure of demotion has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.57": "it’s done against one who’s committed an offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.59": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.60": "it’s done against one who’s committed an offense that’s clearable by confession, it’s done legitimately, it’s done by a unanimous assembly. ",
