--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -355,7 +355,7 @@
   "pli-tv-kd11:10.1.100": "He shouldn’t give the full ordination. ",
   "pli-tv-kd11:10.1.101": "He shouldn’t give formal support. ",
   "pli-tv-kd11:10.1.102": "He shouldn’t have a novice monk attend on him. ",
-  "pli-tv-kd11:10.1.103": "He should not accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd11:10.1.103": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:10.1.104": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd11:10.1.105": "He should not commit the same offense as the offense for which the Sangha did the procedure of demotion against him. ",
   "pli-tv-kd11:10.1.106": "He should not commit an offense similar to the offense for which the Sangha did the procedure of demotion against him. ",
