--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -358,8 +358,8 @@
   "pli-tv-kd11:10.1.103": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:10.1.104": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd11:10.1.105": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of demotion against him. ",
-  "pli-tv-kd11:10.1.106": "He should not commit an offense similar to the offense for which the Sangha did the procedure of demotion against him. ",
-  "pli-tv-kd11:10.1.107": "He should not commit an offense worse than the offense for which the Sangha did the procedure of demotion against him. ",
+  "pli-tv-kd11:10.1.106": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of demotion against him. ",
+  "pli-tv-kd11:10.1.107": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of demotion against him. ",
   "pli-tv-kd11:10.1.108": "He should not criticize the procedure. ",
   "pli-tv-kd11:10.1.109": "He should not criticize those who did the procedure. ",
   "pli-tv-kd11:10.1.110": "He should not cancel the observance-day ceremony of a regular monk. ",
