--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -360,7 +360,7 @@
   "pli-tv-kd11:10.1.105": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of demotion against him. ",
   "pli-tv-kd11:10.1.106": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of demotion against him. ",
   "pli-tv-kd11:10.1.107": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of demotion against him. ",
-  "pli-tv-kd11:10.1.108": "He should not criticize the procedure. ",
+  "pli-tv-kd11:10.1.108": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd11:10.1.109": "He should not criticize those who did the procedure. ",
   "pli-tv-kd11:10.1.110": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:10.1.111": "He should not cancel the invitation ceremony of a regular monk. ",
