--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -381,7 +381,7 @@
   "pli-tv-kd11:11.1.8": "He had the monks gathered and said, ",
   "pli-tv-kd11:11.1.9": "“Well then, lift that legal procedure of demotion against the monk Seyyasaka. ",
   "pli-tv-kd11:11.2.0": "2.5 The group of eighteen on not to be lifted ",
-  "pli-tv-kd11:11.2.1": "“When a monk has five qualities, a legal procedure of demotion against him should not be lifted: ",
+  "pli-tv-kd11:11.2.1": "“When a monk has five qualities, a legal procedure of demotion against him shouldn’t be lifted: ",
   "pli-tv-kd11:11.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
   "pli-tv-kd11:11.2.4": "When a monk has another five qualities, a procedure of demotion against him should not be lifted: ",
   "pli-tv-kd11:11.2.5": "he commits the same offense for which the Sangha did the procedure of demotion against him; he commits an offense similar to the one for which the Sangha did the procedure of demotion against him; he commits an offense worse than the one for which the Sangha did the procedure of demotion against him; ",
