--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -523,11 +523,11 @@
   "pli-tv-kd11:13.7.27": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:13.7.28": "The Sangha has done the legal procedure of banishing the monks Assaji and Punabbasuka, ",
   "pli-tv-kd11:13.7.29": "prohibiting them from staying at Kīṭāgiri. ",
-  "pli-tv-kd11:13.7.30": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
+  "pli-tv-kd11:13.7.30": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:14.1.0": "3.1 The group of twelve on illegitimate legal procedures ",
-  "pli-tv-kd11:14.1.1": "“When a legal procedure of banishment has three qualities, it is illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:14.1.1": "“When a legal procedure of banishment has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:14.1.2": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
-  "pli-tv-kd11:14.1.4": "When a procedure of banishment has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:14.1.4": "When a procedure of banishment has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:14.1.5": "it’s done against one who hasn’t committed any offense, it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done against one who’s confessed their offense. ",
   "pli-tv-kd11:14.1.6": "When a procedure of banishment has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: it’s done without having accused the person of their offense, it’s done without having reminded the person of their offense, it’s done without having charged the person with their offense. ",
   "pli-tv-kd11:14.1.7": "“When a procedure of banishment has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: it’s done in the absence of the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
