--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -593,7 +593,7 @@
   "pli-tv-kd11:15.1.0": "3.4 The eighteen kinds of conduct ",
   "pli-tv-kd11:15.1.1": "“A monk who’s had a legal procedure of banishment done against himself should conduct himself properly. ",
   "pli-tv-kd11:15.1.2": "This is the proper conduct: ",
-  "pli-tv-kd11:15.1.3": "He should not give the full ordination. ",
+  "pli-tv-kd11:15.1.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd11:15.1.4": "He should not give formal support. ",
   "pli-tv-kd11:15.1.5": "He should not have a novice monk attend on him. ",
   "pli-tv-kd11:15.1.6": "He should not accept being appointed as an instructor of the nuns. ",
