--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -594,8 +594,8 @@
   "pli-tv-kd11:15.1.1": "“A monk who’s had a legal procedure of banishment done against himself should conduct himself properly. ",
   "pli-tv-kd11:15.1.2": "This is the proper conduct: ",
   "pli-tv-kd11:15.1.3": "He shouldn’t give the full ordination. ",
-  "pli-tv-kd11:15.1.4": "He should not give formal support. ",
-  "pli-tv-kd11:15.1.5": "He should not have a novice monk attend on him. ",
+  "pli-tv-kd11:15.1.4": "He shouldn’t give formal support. ",
+  "pli-tv-kd11:15.1.5": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd11:15.1.6": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:15.1.7": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd11:15.1.8": "He should not commit the same offense as the offense for which the Sangha did the procedure of banishing him. ",
