--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -601,7 +601,7 @@
   "pli-tv-kd11:15.1.8": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of banishing him. ",
   "pli-tv-kd11:15.1.9": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of banishing him. ",
   "pli-tv-kd11:15.1.10": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of banishing him. ",
-  "pli-tv-kd11:15.1.11": "He should not criticize the procedure. ",
+  "pli-tv-kd11:15.1.11": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd11:15.1.12": "He should not criticize those who did the procedure. ",
   "pli-tv-kd11:15.1.13": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:15.1.14": "He should not cancel the invitation ceremony of a regular monk. ",
